// plugins {
// 	id 'java'
// 	id 'org.springframework.boot' version '3.5.10'
// 	id 'io.spring.dependency-management' version '1.1.7'
// }

// group = 'com.culture'
// version = '0.0.1-SNAPSHOT'
// description = 'Demo project for Spring Boot'

// java {
// 	toolchain {
// 		languageVersion = JavaLanguageVersion.of(17)
// 	}
// }

// configurations {
// 	compileOnly {
// 		extendsFrom annotationProcessor
// 	}
// }

// repositories {
// 	mavenCentral()
// }

// dependencies {
// 	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
// 	// implementation 'org.springframework.boot:spring-boot-starter-web'
// 	// compileOnly 'org.projectlombok:lombok'
// 	// runtimeOnly 'com.h2database:h2'
// 	// runtimeOnly 'com.mysql:mysql-connector-j'
// 	// annotationProcessor 'org.projectlombok:lombok'
// 	// testImplementation 'org.springframework.boot:spring-boot-starter-test'
// 	// testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
// 	implementation 'org.springframework.boot:spring-boot-starter-web'
//     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

//     implementation 'org.springframework.boot:spring-boot-starter-security'

//     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
//     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
//     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
// }

// tasks.named('test') {
// 	useJUnitPlatform()
// }
plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.10'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.culture'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// implementation 'org.springframework.boot:spring-boot-starter-web'
	// compileOnly 'org.projectlombok:lombok'
	// runtimeOnly 'com.h2database:h2'
	// runtimeOnly 'com.mysql:mysql-connector-j'
	// annotationProcessor 'org.projectlombok:lombok'
	// testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    implementation 'org.springframework.boot:spring-boot-starter-security'

    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'

    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	runtimeOnly 'com.h2database:h2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}
